Rydding, endring av forklarende tekst

--- a/js-ov1/oppg1.html
+++ b/js-ov1/oppg1.html
@@ -8,9 +8,13 @@
 </head>
 <body>
     <script>
-        var name = prompt("Hva heter du?");
-        var color = prompt("Hva er din favorittfarge?");
-        alert(`Hei, ${name}, liker du ${color}-farge du?`)
+        //Spør brukeren om input via prompt(popup med tekstboks), send setning tilbake i alert(vanlig popup).
+
+
+        let name = prompt("Hva heter du?");
+        let color = prompt("Hva er din favorittfarge?");
+        alert(`Hei, ${name}, liker du ${color}-farge du?`) 
+        //Bruker template literal med backtick, lettere å lese enn en rekke med pluss
     </script>
 </body>
 </html>
