--- a/js-ov1/oppg3.html
+++ b/js-ov1/oppg3.html
@@ -11,8 +11,8 @@
     <div id="outputDiv"></div>
     <script>
         //Bind DOM elements to variables
-        var textBox = document.getElementById("inp_text");
-        var outDiv = document.getElementById("outputDiv");
+        let textBox = document.getElementById("inp_text");
+        let outDiv = document.getElementById("outputDiv");
 
         //Oninput is called every time text is typed or removed from the input element. 
         textBox.oninput = function(){
