--- a/js-ov2/oppg1.html
+++ b/js-ov2/oppg1.html
@@ -16,12 +16,12 @@
         <p id="p_res"></p>
     </div>
     <script>
-        var outElement = document.getElementById("p_res");
-        var btnElement = document.getElementById("btn1");
-        var inpElement = document.getElementById("inp_num1");
+        let outElement = document.getElementById("p_res");
+        let btnElement = document.getElementById("btn1");
+        let inpElement = document.getElementById("inp_num1");
         
         btnElement.onclick= function(){
-            var num1 = inpElement.value; //Hent verdien fra tekstboksen
+            let num1 = inpElement.value; //Hent verdien fra tekstboksen
 
             if (isNaN(num1)) { //Sjekk at verdien er et tall, ellers si ifra og avbryt
                 outElement.innerHTML = "Feil; vennligst oppgi et tall";
