--- a/js-ov2/oppg2.html
+++ b/js-ov2/oppg2.html
@@ -16,18 +16,18 @@
         <p id="p_res"></p>
     </div>
     <script>
-        var outElement = document.getElementById("p_res");
-        var btnElement = document.getElementById("btn1");
-        var inpElement = document.getElementById("inp_num1");
+        let outElement = document.getElementById("p_res");
+        let btnElement = document.getElementById("btn1");
+        let inpElement = document.getElementById("inp_num1");
         btnElement.onclick= function(){
-            var age = inpElement.value; //Hent verdien fra tekstboksen
+            let age = inpElement.value; //Hent verdien fra tekstboksen
 
             if (isNaN(age)) { //Sjekk at verdien er et tall, ellers si ifra og avbryt
                 outElement.innerHTML = "Feil; vennligst oppgi et tall";
                 return 
             }
 
-            var res = "";
+            let res = "";
             if (age >= 18) { //Hvis mer enn ELLER lik
                 res += "Du er myndig.";
                 if (age > 67) { //Hvis mer enn, ikke lik
