--- a/js-ov4/ov4.html
+++ b/js-ov4/ov4.html
@@ -7,6 +7,7 @@
     <title>Øving 4</title>
 </head>
 <body>
+    <h1>Js-ov4</h1>
     <h2>Oppgave 1</h2>
     <div id="oppg1_in">
         <label>Alder: <input type="number" id="o1_age" placeholder="Alder i år"></label>
@@ -38,19 +39,9 @@
     
     <h2>Oppgave 6</h2>
     <div id="oppg6_in">
-        <label>Mål-alder: <input type="text" id="o6_in1">
+        <label>Mål-alder: <input type="text" id="o6_in1"></label>
     </div>
     <div id="oppg6_out"></div>
-
-    <h2>Oppgave 7</h2>
-    <div id="oppg7_in"></div>
-    <div id="oppg7_out"></div>
-
-    <h2>Oppgave 8</h2>
-    <div id="oppg8_in"></div>
-    <div id="oppg8_out"></div>
-
-
 
 
 
@@ -58,14 +49,16 @@
         // Oppgave 1 - Tenåring i huset?
         // Lag en funksjon som returnerer teksten "Du er tenåring" hvis alder er mellom 13 og 19 år, og
         // ellers returnerer teksten "Du er ikke tenåring". Her må du bruke if-setning i funksjonen.
-        let o1AgeInput = document.getElementById("o1_age")
+        const o1AgeInput = document.getElementById("o1_age")
         o1AgeInput.oninput = ()=>{
             let o1Out = "";
-            let age = parseInt(o1AgeInput.value); 
+            const age = parseInt(o1AgeInput.value); 
             if (age && (age >= 12 && age<= 19)) {
                 o1Out = "Du er tenåring";
-            } else {
+            } else if (age) {
                 o1Out = "Du er ikke tenåring";
+            } else {
+                o1Out = "Vennligst skriv inn et tall";
             }
             document.getElementById("oppg1_out").innerHTML = o1Out;
         }
@@ -73,8 +66,8 @@
 
         // Oppgave 2 - Største tall
         // Lag en funksjon som finner det største av to tall.
-        let o2_in1 = document.getElementById("o2_in1");
-        let o2_in2 = document.getElementById("o2_in2");
+        const o2_in1 = document.getElementById("o2_in1");
+        const o2_in2 = document.getElementById("o2_in2");
         function o2_biggest() {
             //Les input som tall
             let n1 = parseInt(o2_in1.value);
@@ -92,10 +85,10 @@
         // Lag en funksjon som returnerer arealet til et kvadrat. Det er nok at kun en side er kjent for at
         // arealet skal kunne regnes ut, fordi i et kvadrat er som kjent alle sider like. Formelen for
         // arealet av et kvadrat blir derfor: Areal = side ganger side.
-        let o3_in = document.getElementById("o3_in")
-        let o3_out = document.getElementById("oppg3_out");
+        const o3_in = document.getElementById("o3_in")
+        const o3_out = document.getElementById("oppg3_out");
         o3_in.oninput = ()=>{
-            let s = parseInt(o3_in.value);
+            const s = parseInt(o3_in.value);
             if (s) {
                 o3_out.innerHTML = `Kvadratet med sidelengde ${s} har arealet ${s**2}`;
             } else {
@@ -125,10 +118,10 @@
             document.getElementById("oppg4_out").innerHTML = data;
         }
         document.getElementById("oppg4_trigger").onclick = ()=>{
-            let inputNum = parseInt(document.getElementById("o4_in1").value);
+            const inputNum = parseInt(document.getElementById("o4_in1").value);
             if (inputNum) {
                 //Kall de to funksjonene beskrevet over
-                let arr = factorize(inputNum);
+                const arr = factorize(inputNum);
                 displayOppg4("Faktorer: " + arr.toString());
             } else {
                 displayOppg4("Vennligst skriv inn et tall.")
@@ -137,9 +130,9 @@
 
         //Oppg 5, "Lag et program som fyller en array med innhold (hva du vil) og som skriver ut det siste elementet i en meldingsboks.
         document.getElementById("oppg5_trigger").onclick = ()=>{
-            let inputNum = parseInt(document.getElementById("o4_in1").value);
+            const inputNum = parseInt(document.getElementById("o4_in1").value);
             if (inputNum) {
-                let arr = factorize(inputNum);
+                const arr = factorize(inputNum);
                 alert(arr[arr.length - 1]); //Skriv siste element til en alert
             } else {
                 alert("Vennligst skriv inn et tall");
@@ -158,11 +151,29 @@
         // er stikkordet her...
         const o6_name = ["Jens", "Ole", "Kari", "Berit"];
         const o6_age = [12, 48, 30, 18];
-        let o6_in = document.getElementById("o6_in")
+        const o6_in = document.getElementById("o6_in1");
+        const o6_out = document.getElementById("oppg6_out");
         o6_in.oninput = ()=>{
-            let targetAge = parseInt(o6_in.value);
-        }
+            o6_out.innerHTML = "";
+            const targetAge = parseInt(o6_in.value);
+            //Sjekk at et tall er tastet inn
+            if (!targetAge) {
+                o6_out.innerHTML = "Vennligst skriv inn et tall.";
+                return;
+            }
 
+            for (let i = 0; i < o6_name.length; i++) {
+                let ageDiff = targetAge - o6_age[i];
+                if (ageDiff == 0) {         //Nå
+                    o6_out.innerHTML += `${o6_name[i]} er ${targetAge} år gammel.`;
+                } else if (ageDiff > 0) {   //Fremtid
+                    o6_out.innerHTML += `Om ${ageDiff} år er ${o6_name[i]} ${targetAge} år gammel.`;
+                } else {                    //Fortid
+                    o6_out.innerHTML += `For ${-ageDiff} år siden var ${o6_name[i]} ${targetAge} år gammel.`;
+                }
+                o6_out.innerHTML += "<br>"; //Ny linje, mindre rot
+            }
+        }
 
 
     </script>
