--- a/js-ov7/index.html
+++ b/js-ov7/index.html
@@ -22,6 +22,7 @@
       </select>
       <button id="btn_clear">Clear</button>
       <button id="btn_fill">Fill</button>
+      <button id="btn_shuffle">Shuffle</button>
       Brush size:
       <input type="number" value=1 min=1 max=10 step=1 id="sel_size">
     </div>
